# MTM-HCC-Swin3d-classification

./: README.md  pyproject.toml  requirements.txt  train.py
swin3d/: config.py  data.py  losses.py  model.py  train.py
